--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,30 @@
-selenium>=4.0.0
-pytest>=7.0.0
-webdriver_manager>=3.8.0
-customtkinter>=5.1.2
+attrs==25.1.0
+build==1.2.2.post1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+colorama==0.4.6
+customtkinter==5.2.2
+darkdetect==0.8.0
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+outcome==1.3.0.post0
+packaging==24.2
+pluggy==1.5.0
+pycparser==2.22
+pyproject_hooks==1.2.0
+PySocks==1.7.1
+pytest==8.3.4
+python-dotenv==1.0.1
+requests==2.32.3
+selenium==4.29.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.12.2
+urllib3==2.3.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+wsproto==1.2.0
